--- a/Squelch/Resources/layout/fragment_home.xml
+++ b/Squelch/Resources/layout/fragment_home.xml
@@ -59,7 +59,7 @@
                 app:cardCornerRadius="10dp"
                 app:cardElevation="10dp"
                 android:backgroundTint="@color/Goldenrod"
-                android:visibility="visible">
+                android:visibility="gone">
                 <LinearLayout
                     android:id="@+id/fragment_home_donation_card_inquiry"
                     android:orientation="vertical"
@@ -88,7 +88,7 @@
                             android:background="@drawable/rounded_corners_ripple"
                             android:backgroundTint="@color/buttonNegativeBackground"
                             android:textColor="@color/buttonNegativeForeground"
-                            android:text="@string/text_never"/>
+                            android:text="@string/text_nah"/>
                         <Button
                             android:id="@+id/fragment_home_donation_card_inquiry_neutral_button"
                             android:layout_height="wrap_content"
@@ -223,6 +223,7 @@
             <LinearLayout
                 android:id="@+id/fragment_home_stats_layout"
                 android:animateLayoutChanges="true"
+                android:visibility="gone"
                 android:orientation="vertical"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
@@ -253,6 +254,11 @@
                     android:layout_gravity="center"
                     android:textColor="@color/White"/>
             </LinearLayout>
+
+            <!-- Spacer -->
+            <View
+                android:layout_height="20dp"
+                android:layout_width="match_parent"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
