--- a/Squelch/Resources/layout/fragment_feedback.xml
+++ b/Squelch/Resources/layout/fragment_feedback.xml
@@ -348,7 +348,7 @@
                     android:id="@+id/fragment_feedback_button_negative"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/action_back"
+                    android:text="@string/text_back"
                     android:layout_weight="0.5"
                     android:background="@drawable/rounded_corners_ripple"
                     android:layout_margin="10dp"
@@ -359,7 +359,7 @@
                     android:id="@+id/fragment_feedback_button_positive"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/action_next"
+                    android:text="@string/text_next"
                     android:layout_weight="0.5"
                     android:background="@drawable/rounded_corners_ripple"
                     android:layout_margin="10dp"
