--- a/Squelch/Resources/layout/dialog_fragment_open_source.xml
+++ b/Squelch/Resources/layout/dialog_fragment_open_source.xml
@@ -65,7 +65,7 @@
             android:id="@+id/fragment_open_source_negative_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/action_close"
+            android:text="@string/text_close"
             android:layout_weight="0.5"
             android:background="@drawable/rounded_corners_ripple"
             android:layout_margin="10dp"
