--- a/Squelch/Resources/layout/fragment_blackout.xml
+++ b/Squelch/Resources/layout/fragment_blackout.xml
@@ -128,7 +128,7 @@
                 android:id="@+id/fragment_blackout_button_unlock"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/action_unlock"
+                android:text="@string/text_unlock"
                 android:layout_weight="0.5"
                 android:background="@drawable/rounded_corners_ripple"
                 android:layout_margin="10dp"
