--- a/Squelch/Resources/layout/fragment_first_time_setup.xml
+++ b/Squelch/Resources/layout/fragment_first_time_setup.xml
@@ -263,7 +263,7 @@
                     android:focusable="auto"
                     android:background="@drawable/rounded_corners_ripple"
                     android:layout_margin="10dp"
-                    android:text="@string/action_get_started"
+                    android:text="@string/text_get_started"
                     android:textColor="@color/buttonPositiveForeground" />
             </LinearLayout>
         </LinearLayout>
