--- a/squelch/Resources/layout/dialog_fragment_donation.xml
+++ b/squelch/Resources/layout/dialog_fragment_donation.xml
@@ -137,7 +137,7 @@
 			android:id="@+id/fragment_donation_negative_button"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="@string/action_cancel"
+			android:text="@string/text_cancel"
 			android:layout_weight="0.5"
             android:background="@drawable/rounded_corners_ripple"
             android:layout_margin="10dp"
@@ -148,7 +148,7 @@
 			android:id="@+id/fragment_donation_positive_button"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="@string/action_submit"
+			android:text="@string/text_submit"
 			android:layout_weight="0.5"
             android:background="@drawable/rounded_corners_ripple"
             android:layout_margin="10dp"
