--- a/squelch/Resources/layout/fragment_statistics.xml
+++ b/squelch/Resources/layout/fragment_statistics.xml
@@ -1,7 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:animateLayoutChanges="true"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp">
+        <Button
+            android:id="@+id/fragment_statistics_filter_one_week"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="1W"
+            android:textColor="@color/colorPrimaryForeground"
+            android:background="@drawable/rounded_corners_ripple"
+            android:backgroundTint="@color/colorPrimary" 
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/fragment_statistics_filter_one_month"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="1M"
+            android:textColor="@color/colorPrimaryForeground"
+            android:background="@drawable/rounded_corners_ripple"
+            android:backgroundTint="@color/colorPrimary" 
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/fragment_statistics_filter_one_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="1Y"
+            android:textColor="@color/colorPrimaryForeground"
+            android:background="@drawable/rounded_corners_ripple"
+            android:backgroundTint="@color/colorPrimary" 
+            android:layout_weight="1"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimary"/>
+    <ScrollView
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+        <LinearLayout
+            android:id="@+id/fragment_statistics_overview_layout"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TableLayout
+                android:id="@+id/fragment_statistics_overview_table"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:stretchColumns="1,1,1"
+                android:padding="10dp">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/text_total_blackouts"
+                        android:textSize="14dp"
+                        android:textStyle="bold"
+                        android:padding="10dp"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/text_total_time_saved"
+                        android:textSize="14dp"
+                        android:textStyle="bold"
+                        android:padding="10dp"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/text_total_bids"
+                        android:textSize="14dp"
+                        android:textStyle="bold"
+                        android:padding="10dp"
+                        android:layout_gravity="center"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/fragment_statistics_overview_total_blackouts"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:padding="10dp"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:id="@+id/fragment_statistics_overview_total_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:padding="10dp"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:id="@+id/fragment_statistics_overview_total_bids"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:padding="10dp"
+                        android:layout_gravity="center"/>
+                </TableRow>
+            </TableLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorPrimary"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text_statuses"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                android:padding="10dp"/>
+            <com.github.mikephil.charting.charts.PieChart
+                android:id="@+id/fragment_statistics_blackout_statuses_pie_chart"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorPrimary"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
