--- a/squelch/Resources/layout/fragment_schedule.xml
+++ b/squelch/Resources/layout/fragment_schedule.xml
@@ -25,7 +25,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="No items to display - try setting up a blackout!"
+                    android:text="@string/fragment_schedule_notice_no_items"
                     android:textSize="16dp"
                     android:gravity="center"
                     android:textStyle="bold"/>
