--- a/squelch/Resources/layout/dialog_fragment_donation.xml
+++ b/squelch/Resources/layout/dialog_fragment_donation.xml
@@ -18,7 +18,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="We "
+            android:text="@string/fragment_donation_header_pre"
             android:textColor="@color/White"
             android:textSize="20dp"/>
         <ImageView
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/White"
-            android:text=" You"
+            android:text="@string/fragment_donation_header_post"
             android:textSize="20dp"/>
     </LinearLayout>
     <TextView
