--- a/squelch/Resources/layout/fragment_blackout.xml
+++ b/squelch/Resources/layout/fragment_blackout.xml
@@ -60,14 +60,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Difficulty"
+                        android:text="@string/text_blackout_difficulty"
                         android:padding="10dp"
                         android:layout_gravity="center"
                         android:textColor="@color/colorPrimaryForeground" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Bid"
+                        android:text="@string/text_blackout_bid"
                         android:padding="10dp"
                         android:layout_gravity="center"
                         android:textColor="@color/colorPrimaryForeground" />
@@ -79,14 +79,14 @@
                         android:id="@+id/fragment_blackout_information_difficulty_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Easy"
+                        android:text="_difficulty"
                         android:padding="10dp"
                         android:layout_gravity="center" />
                     <TextView
                         android:id="@+id/fragment_blackout_information_bid_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="$0"
+                        android:text="_bid"
                         android:padding="10dp"
                         android:layout_gravity="center" />
                 </TableRow>
@@ -105,7 +105,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Blacklist"
+                        android:text="@string/text_blackout_blacklist"
                         android:padding="10dp"
                         android:layout_gravity="center"
                         android:layout_span="2"
