--- a/squelch/Resources/layout/template_schedule_row.xml
+++ b/squelch/Resources/layout/template_schedule_row.xml
@@ -20,7 +20,7 @@
         android:textColor="@color/White"
         android:textStyle="bold"
         android:textSize="20dp"
-        android:text="hours" />
+        android:text="_hours" />
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/template_schedule_row_range_label"
         android:layout_width="match_parent"
@@ -30,5 +30,5 @@
         android:background="@android:color/transparent"
         android:textSize="12dp"
         android:textColor="@color/White"
-        android:text="date to date" />
+        android:text="_date" />
 </androidx.constraintlayout.widget.ConstraintLayout>
